Using fixed height for images on homepage to resolve alignment issues

--- a/src/webapp/static/css/homepagestyle.css
+++ b/src/webapp/static/css/homepagestyle.css
@@ -115,3 +115,7 @@
 .hide-input {
   display: none; !important;
 }
+
+.img-wrapper {
+  height: 210px;
+}
